--- a/index.html
+++ b/index.html
@@ -9,18 +9,18 @@
    <link rel="stylesheet" href="./style.css">
    <script src="https://code.jquery.com/jquery-3.6.0.min.js"
       integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-
-
    <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css" />
-   <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
-   <script defer src="./script.js"></script>
+   <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>  
+ 
 </head>
 
 <body>
    <header>
-      <h1 id="example">Thek Response</h1>
+      <h1 id="example">Paul Thek: Response Editor</h1>
    </header>
+
    <div class="container">
+      <p id="scrolldown">Scroll Down</p>
       <div class="hand bot">
          <img src="./img/handbottom.png" alt="">
       </div>
@@ -221,7 +221,7 @@
       </div>
    </div>
 
-   <div class="question">
+   <!-- <div class="question">
       <div class="question-line">
          <div class="inner">
             <h2>Prompt</h2>
@@ -280,7 +280,7 @@
          </div>
       </div>
       <p id="colon">:</p>
-   </div>
+   </div> -->
 </body>
-
+<script src="./script.js"></script>
 </html>
