--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
    </header>
 
    <div class="container">
-      <p id="scrolldown">Scroll Down</p>
+      <p id="scrolldown">Scroll down and edit responses as you desire</p>
       <div class="hand bot">
          <img src="./img/handbottom.png" alt="">
       </div>
